# token-listing

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
docs/: cca.md
src/declarations/ic_auction/: ic_auction.did  ic_auction.did.d.ts  ic_auction.did.js  index.d.ts  index.js
src/declarations/images_canister/: images_canister.did.d.ts  images_canister.did.js  index.d.ts  index.js
src/declarations/token_listing_app/: index.d.ts  index.js
src/declarations/token_listing_canister/: index.d.ts  token_listing_canister.did  token_listing_canister.did.d.ts  token_listing_canister.did.js
src/declarations/tokens_canister/: index.d.ts  index.js  tokens_canister.did  tokens_canister.did.d.ts  tokens_canister.did.js
src/ic_auction/: Cargo.toml  ic_auction.did
src/ic_auction/src/: api.rs  api_admin.rs  api_init.rs  cca.rs  ecdsa.rs  evm.rs  helper.rs  icp.rs  lib.rs  outcall.rs  store.rs  svm.rs  types.rs
src/ic_auction/src/icp/: kong.rs
src/ic_auction/src/svm/: raydium.rs  rpc.rs  types.rs
src/icp_cca/: Cargo.toml
src/icp_cca/src/: api_init.rs  auction.rs  lib.rs  store.rs  types.rs
src/images_canister/: Cargo.toml  images_canister.did
src/images_canister/src/: api.rs  api_admin.rs  api_http.rs  api_init.rs  helper.rs  lib.rs  store.rs  types.rs
src/token_listing_app/: .eslintrc.js  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
src/token_listing_app/src/: app.css  app.html  global.d.ts
src/token_listing_app/src/declarations/ic_auction/: ic_auction.did  ic_auction.did.d.ts  ic_auction.did.js
src/token_listing_app/src/declarations/token_listing_canister/: index.js  token_listing_canister.did  token_listing_canister.did.js
src/token_listing_app/src/lib/: constants.ts
src/token_listing_app/src/lib/actions/: portal.ts
src/token_listing_app/src/lib/animations/: motion.ts
src/token_listing_app/src/lib/canisters/: actors.ts  icAuction.ts  tokenListing.ts
src/token_listing_app/src/lib/components/: CCAModal.svelte  CanisterModal.svelte  Header.svelte  PriceDiscoveryChart.svelte  UserFundsModal.svelte  UserProfileModal.svelte
src/token_listing_app/src/lib/icons/: alert-line.svelte  arrow-down-line.svelte  arrow-down-long-fill.svelte  arrow-down-s-line.svelte  arrow-left-right-line.svelte  arrow-right-line.svelte  arrow-right-up-line.svelte  check-double-line.svelte  check-line.svelte  checkbox-circle-fill.svelte  close-circle-fill.svelte  close-circle-line.svelte  close-line.svelte  delete-bin-4-line.svelte  error-warning-fill.svelte  error-warning-line.svelte  file-copy-line.svelte  github-fill.svelte  information-2-fill.svelte  information-line.svelte  logout-circle-r-line.svelte  moon-line.svelte  question-line.svelte  refresh-line.svelte  settings-4-line.svelte  spinner.svelte  sun-line.svelte  twitter-x-line.svelte  user-3-line.svelte  wallet-3-line.svelte
src/token_listing_app/src/lib/services/: paying.ts
src/token_listing_app/src/lib/stores/: auth.svelte.ts  modal.svelte.ts  theme.svelte.ts  toast.svelte.ts
src/token_listing_app/src/lib/ui/: Button.svelte  Dropdown copy.svelte  MarkdownContent.svelte  Modal.svelte  Spinner.svelte  TextClipboardButton.svelte  Toast.svelte  Tooltip.svelte
src/token_listing_app/src/lib/utils/: auth.ts  chain.ts  evmrpc.ts  fetcher.ts  helper.ts  markdown.ts  svmrpc.ts  token.ts  tryrun.ts  url.ts  window.ts
src/token_listing_app/src/routes/: +layout.svelte  +page.svelte
src/token_listing_app/src/routes/_/launchpad/: +page.svelte
src/token_listing_app/src/routes/_/launchpad/[id]/: +page.svelte
src/token_listing_app/static/: .ic-assets.json
src/token_listing_app/static/.well-known/: ic-domains
src/token_listing_canister/: Cargo.toml
src/token_listing_canister/src/: api.rs  api_admin.rs  api_init.rs  helper.rs  icp.rs  lib.rs  schnorr.rs  store.rs  svm.rs  types.rs
src/token_listing_canister/src/svm/: constants.rs  rpc.rs  spl.rs  types.rs
src/tokens_canister/: Cargo.toml  tokens_canister.did
src/tokens_canister/src/: api.rs  api_admin.rs  api_http.rs  helper.rs  lib.rs  store.rs  types.rs  x402.rs
