[workspace]
members = ["src/icp_cca"]
resolver = "2"


[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/ldclabs/token-listing"
keywords = ["canister", "icp", "cca"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
base64 = "0.22"
bincode = "1.3.3"
candid = { version = "0.10", features = ["value", "printer"] }
ciborium = "0.2"
futures = "0.3"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-stable-structures = "0.7"
ic-http-certification = "3"
ic_auth_types = "0.7"
ic-secp256k1 = "0.3"
ic-ed25519 = "0.4"
icrc-ledger-types = "0.1"
lazy_static = "1.5"
once_cell = "1.21"
num-traits = "0.2"
url = "2.5"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
ic-dummy-getrandom-for-wasm = "0.1"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
