[workspace]
members = [
  "src/ic_auction",
  "src/images_canister",
  "src/token_listing_canister",
  "src/tokens_canister",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
edition = "2024"
version = "0.1.2"
repository = "https://github.com/ldclabs/token-listing"
keywords = ["canister", "icp", "cca"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy-consensus = "1"
alloy-eips = "1"
alloy-primitives = "1.4"
alloy-rpc-types-eth = "1"
alloy-signer = "1"
base64 = "0.22"
bincode = "1.3.3"
borsh = "1.5"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
candid = { version = "0.10", features = ["value", "printer"] }
ciborium = "0.2"
futures = "0.3"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-stable-structures = "0.7"
ic-http-certification = "3"
ic_auth_types = "0.7"
ic-secp256k1 = "0.3"
ic-ed25519 = "0.4"
icrc-ledger-types = "0.1"
lazy_static = "1.5"
once_cell = "1.21"
num-traits = "0.2"
url = "2.5"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
solana-program = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.1"
solana-account-decoder-client-types = "3.1"
solana-transaction-status-client-types = "3.1"
solana-system-interface = "3.0"
spl-associated-token-account-interface = "2.0"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
ic-dummy-getrandom-for-wasm = "0.1"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
