[package]
name = "ic_auction"
description = "Continuous Clearing Auction (CCA) on ICP"
publish = false
repository = "https://github.com/ldclabs/token-listing/tree/main/src/ic_auction"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
ic_auth_types = { workspace = true }
ic-secp256k1 = { workspace = true }
ic-ed25519 = { workspace = true }
icrc-ledger-types = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
solana-instruction = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
spl-associated-token-account-interface = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
ic-dummy-getrandom-for-wasm = { workspace = true }
