[package]
name = "tokens_canister"
description = "Tokens Canister"
publish = false
repository = "https://github.com/ldclabs/token-listing/tree/main/src/tokens_canister"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
ic_auth_types = { workspace = true }
ic-ed25519 = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
